# tests/fuzz/CMakeLists.txt

IF(NOT RAPTOR_ENABLE_FUZZING)
  RETURN()
ENDIF()

IF(NOT RAPTOR_FUZZER_FLAGS)
  MESSAGE(STATUS "RAPTOR_ENABLE_FUZZING is ON but RAPTOR_FUZZER_FLAGS is empty; skipping fuzz targets")
  RETURN()
ENDIF()

ADD_EXECUTABLE(fuzz_turtle fuzz_turtle.c)
TARGET_INCLUDE_DIRECTORIES(fuzz_turtle PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src)
TARGET_LINK_LIBRARIES(fuzz_turtle raptor2)
TARGET_COMPILE_DEFINITIONS(fuzz_turtle PRIVATE RAPTOR_USE_LIBFUZZER=1)
SET_TARGET_PROPERTIES(fuzz_turtle PROPERTIES
  COMPILE_FLAGS "${RAPTOR_FUZZER_FLAGS}"
  LINK_FLAGS "${RAPTOR_FUZZER_FLAGS}"
  BUILD_RPATH "${CMAKE_BINARY_DIR}/src"
)
